# MultiplayerChatServer

./: CMakeLists.txt  File_Structure.txt  README.md
include/: client.hpp  server.hpp
src/client/: CMakeLists.txt  client.cpp  main.cpp
src/server/: CMakeLists.txt  file_transfer.cpp  file_transfer.hpp  main.cpp  server.cpp  server.hpp
